Touched up black jack game!

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     </head>
     <body>
         <h1>Blackjack</h1>
-        <p id="message-el"></p>
-        <p>Cards:</p>
-        <script src="index.js"></script>
+        <p id="message-el">Want to play a round?</p>
+        <p id="cards-el">Cards:</p>
+        <p id="sum-el">Sum:</p>
+        <button onclick="startGame()">START GAME</button>
+        <button id="card-btn" onclick="newCard()">NEW CARD</button>
+        <p id="player-el"></p>
     </body>
+    <script src="index.js"></script>
 </html>
